# flo_curves

./: .gitignore  Cargo.toml  README.md  STYLE.md  THANKS.md
benches/: known_run.md  nearest_point.rs  rasterize.rs  space.rs  sweep.rs  vectorize.rs
demos/: Cargo.toml
demos/arithmetic/: Cargo.toml
demos/arithmetic/src/: main.rs
demos/brush/: Cargo.toml
demos/brush/src/: main.rs
demos/curve_fit/: Cargo.toml
demos/curve_fit/src/: main.rs
demos/curve_intersections/: Cargo.toml
demos/curve_intersections/src/: main.rs
demos/distort/: Cargo.toml
demos/distort/src/: main.rs
demos/offset/: Cargo.toml
demos/offset/src/: main.rs
demos/remove_interior_points/: Cargo.toml
demos/remove_interior_points/src/: g.glif  main.rs
demos/walk/: Cargo.toml
demos/walk/src/: main.rs
src/: coordinate.rs  lib.rs  test_assert.rs
src/arc/: circle.rs  mod.rs
src/bezier/: basis.rs  bounds.rs  characteristics.rs  curve.rs  deform.rs  derivative.rs  distort.rs  fit.rs  length.rs  mod.rs  nearest_point.rs  normal.rs  offset.rs  offset_lms.rs  offset_scaling.rs  offset_subdivision_lms.rs  overlaps.rs  search.rs  section.rs  solve.rs  subdivide.rs  tangent.rs  walk.rs
src/bezier/intersection/: curve_curve_clip.rs  curve_line.rs  fat_line.rs  mod.rs  self_intersection.rs
src/bezier/path/: bounds.rs  graph_path.rs  graph_path_debug.rs  intersection.rs  is_clockwise.rs  mod.rs  path.rs  path_builder.rs  point.rs  ray.rs  stroke.rs  to_curves.rs
src/bezier/path/algorithms/: fill_concave.rs  fill_convex.rs  fill_options.rs  fill_settings.rs  mod.rs
src/bezier/path/arithmetic/: add.rs  arithmetic.rs  chain.rs  chain_add.rs  cut.rs  full_intersect.rs  intersect.rs  mod.rs  ray_cast.rs  sub.rs
src/bezier/path/graph_path/: edge.rs  edge_ref.rs  mod.rs  path_collision.rs  path_collision_2.rs  ray_collision.rs  test.rs
src/bezier/rasterize/: create_distance_field.rs  curve_scan_converter.rs  mod.rs  path_contour.rs  path_distance_field.rs  path_scan_converter.rs  ray_cast_contour.rs  sampled_approx_distance_field_cache.rs  scan_converter.rs
src/bezier/roots/: find_roots.rs  mod.rs  nearest_point_bezier_root_finder.rs  polynomial_to_bezier.rs
src/bezier/vectorize/: brush_stroke.rs  circular_brush.rs  circular_distance_field.rs  column_sampled_contour.rs  contour_edges_by_scanline.rs  daub_brush_distance_field.rs  distance_field.rs  intercept_scan_edge_iterator.rs  marching_squares.rs  mod.rs  sampled_contour.rs  scaled_brush.rs  scaled_contour.rs  scaled_distance_field.rs
src/debug/: graph_path_debug.rs  mod.rs  path_to_string.rs
src/geo/: bounding_box.rs  coord1.rs  coord2.rs  coord3.rs  coordinate.rs  coordinate_ext.rs  geo.rs  has_bounds.rs  mod.rs  space1.rs  sweep.rs
src/line/: coefficients.rs  intersection.rs  line.rs  mod.rs  to_curve.rs
tests/: bez.rs  bounds.rs  coordinates.rs  readme.rs  sweep.rs
tests/bezier/: basis.rs  bounds.rs  characteristics.rs  curve_intersection_clip.rs  deform.rs  distort.rs  flatness_tests.rs  intersection.rs  length.rs  mod.rs  nearest_point.rs  nearest_point_tests.rs  normal.rs  offset.rs  overlaps.rs  search.rs  section.rs  self_intersection.rs  solve.rs  subdivide.rs  tangent.rs  walk.rs
tests/bezier/algorithms/: fill_concave.rs  fill_convex.rs  mod.rs
tests/bezier/path/: arithmetic_add.rs  arithmetic_chain_add.rs  arithmetic_complicated_paths.rs  arithmetic_cut.rs  arithmetic_intersect.rs  arithmetic_sub.rs  bounds.rs  checks.rs  graph_path.rs  intersection.rs  is_clockwise.rs  mod.rs  path.rs  permute.rs  point.rs  rays.rs  stroke_tests.rs  svg.rs  to_curves.rs
tests/bezier/rasterize/: curve_scan_converter_tests.rs  mod.rs  path_contour_tests.rs  path_distance_field_tests.rs  path_scan_converter_tests.rs  ray_cast_contour_tests.rs  sampled_approx_distance_field_cache_tests.rs
tests/bezier/vectorize/: brush_stroke_tests.rs  circular_distance_field_tests.rs  daub_brush_distance_field_tests.rs  marching_squares_tests.rs  mod.rs  sampled_contour_tests.rs  scaled_distance_field_tests.rs
tests/line/: angle.rs  coefficients.rs  intersection.rs  mod.rs  nearest.rs  to_curve.rs
