[package]
name            = "flo_curves"
version         = "0.8.0"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
repository      = "https://github.com/Logicalshift/flo_curves"
description     = "Library for manipulating Bezier curves"
documentation   = "http://docs.rs/flo_curves/"
readme          = "README.md"
edition         = "2018"
include         = [ "Cargo.toml", "LICENSE", "src/**/*", "demos/src/**/*.rs", "demos/*.toml", "demos/*.md", "logo*.png", "README.md", "THANKS.md" ]

keywords        = ["bezier", "geometry", "graphics"]
categories      = ["algorithms","rendering"]

[features]
extra_checks    = []

[dependencies]
itertools   = "0.10"
roots       = "0.0.8"
smallvec    = "1.8"
ouroboros   = "0.15"

[dev-dependencies]
rand        = "0.8"
criterion   = "0.4"

[[bench]]
name        = "rasterize"
path        = "benches/rasterize.rs"
harness     = false

[[bench]]
name        = "vectorize"
path        = "benches/vectorize.rs"
harness     = false

[[bench]]
name        = "sweep"
path        = "benches/sweep.rs"
harness     = false
