[workspace]
members = [
    "offset",
    "walk",
    "distort"
]

[patch.crates-io]
flo_curves              = { path = ".." }
flo_canvas              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.3" }
flo_render              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.3" }
flo_render_canvas       = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.3" }
flo_render_gl_offscreen = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.3" }
flo_draw                = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.3" }

