[workspace]
members = [
    "offset",
    "walk",
    "distort",
    "arithmetic",
    "curve_intersections",
    "remove_interior_points"
]

[patch.crates-io]
flo_curves              = { path = ".." }
flo_draw                = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_canvas              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_canvas_events       = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render              = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_canvas       = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
flo_render_gl_offscreen = { git = "https://github.com/Logicalshift/flo_draw", branch = "v0.4" }
