[package]
name        = "remove_interior_points_demo"
version     = "0.1.0"
authors     = ["Andrew Hunter <andrew@logicalshift.co.uk>"]
description = "Demonstrates the 'remove interior points' function in flo_curves"
edition     = "2018"

[dependencies]
flo_curves  = "0.6"
flo_draw    = "0.4"

MFEKmath    = { git = "https://github.com/MFEK/math.rlib", branch = "main", default-features = false }
glifparser  = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", default-features = false }
